# whisper.net

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPMENT.md  Directory.Build.props  Directory.Packages.props  LICENSE  Makefile  README.md  SECURITY.md  Whisper.net.Maui.Tests.sln  Whisper.net.Maui.Tests.slnx  Whisper.net.Runtime.Clblast.nuspec  Whisper.net.Runtime.CoreML.nuspec  Whisper.net.Runtime.Cublas.nuspec  Whisper.net.Runtime.Cuda.Linux.nuspec  Whisper.net.Runtime.Cuda.Windows.nuspec  Whisper.net.Runtime.Cuda.nuspec  Whisper.net.Runtime.NoAvx.nuspec  Whisper.net.Runtime.OpenVino.nuspec  Whisper.net.Runtime.Vulkan.nuspec  Whisper.net.Runtime.Wasm.nuspec  Whisper.net.Runtime.nuspec  Whisper.net.WinX64.sln  Whisper.net.WinX64.slnx  Whisper.net.sln  Whisper.net.slnx  build_windows_arm.bat  build_windows_arm64.bat  build_windows_x64.bat  build_windows_x86.bat  ios.toolchain.cmake  native-commit-id-wasm  nuget.config  (+2 more)
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/gpt-collect/: collect-gpt-data.yml
.github/workflows/: android-native-build.yaml  android-native-build.yml  bindings-go.yml  bindings-ruby.yml  build-all.yml  build.yml  codeball.yml  codeql-github-actions.yml  codeql.yml  collect-gpt-data.yml  cpu-build-and-test.yml  deploy-website.yml  docker.yml  dotnet-maui.yml  dotnet-noavx.yml  dotnet.yml  download-models-for-tests.yml  download-models-tests.yml  ios-native-build.yml  linux-cuda-native-build.yml  linux-cuda12-native-build.yml  linux-native-build.yml  linux-noavx-native-build.yml  linux-openvino-build.yml  linux-openvino-native-build.yml  linux-vulkan-build.yml  linux-vulkan-native-build.yml  macos-coreml-native-build.yml  macos-native-build.yaml  macos-native-build.yml  nativebuild.yml  pack-all.yml  push-all.yml  quantize-turbo.yml  release.yml  runner-info.yml  test-gh.yml  tvos-native-build.yml  upload-build-artifacts.yml  wasm-native-build.yaml  (+10 more)
Whisper.net/: BeamSearchSamplingStrategyBuilder.cs  GlobalSuppressions.cs  GreedySamplingStrategyBuilder.cs  IStringPool.cs  IWhisperModelLoader.cs  IWhisperSamplingStrategyBuilder.cs  SegmentData.cs  VadSegmentData.cs  WaitHandleExtensions.cs  Whisper.net.csproj  WhisperAlignmentHeads.cs  WhisperAlignmentHeadsPreset.cs  WhisperFactory.cs  WhisperFactoryOptions.cs  WhisperFileModelLoader.cs  WhisperMemoryModelLoader.cs  WhisperModelLoadException.cs  WhisperProcessResult.cs  WhisperProcessingException.cs  WhisperProcessor.cs  WhisperProcessorBuilder.cs  WhisperProcessorEvents.cs  WhisperProcessorOptions.cs  WhisperStreamModelLoader.cs  WhisperVadFactory.cs  WhisperVadProcessor.cs  WhisperVadProcessorBuilder.cs  WhisperVadProcessorOptions.cs
Whisper.net.Demo/: Program.cs  Whisper.net.Demo.csproj  Whisper.net.Demo.sln  WhisperCommand.cs
Whisper.net.Demo/Properties/: launchSettings.json
Whisper.net.Runtime/: Whisper.net.Runtime.targets  ggml-metal.metal
Whisper.net.Runtime.Clblast/: Whisper.net.Runtime.Clblast.targets
Whisper.net.Runtime.CoreML/: Whisper.net.Runtime.CoreML.targets  ggml-metal.metal
Whisper.net.Runtime.CoreML/ios-device/: libggml.dylib  libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/ios-simulator/: libggml.dylib  libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/maccatalyst/: libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/macos/: libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/macos-arm64/: libggml.dylib  libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/macos-x64/: libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/tvos-device/: libggml.dylib  libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.CoreML/tvos-simulator/: libggml.dylib  libwhisper.coreml.dylib  libwhisper.dylib
Whisper.net.Runtime.Cublas/: Whisper.net.Runtime.Cublas.targets
Whisper.net.Runtime.Cuda/: Whisper.net.Runtime.Cuda.targets
Whisper.net.Runtime.OpenVino/: Whisper.net.Runtime.OpenVino.targets
Whisper.net.Runtime.Vulkan/: Whisper.net.Runtime.Vulkan.targets
Whisper.net.Runtime.Wasm/: Whisper.net.Runtime.Wasm.targets
Whisper.net.Runtime/ios-device/: libggml.dylib  libwhisper.dylib
Whisper.net.Runtime/ios-simulator/: libwhisper.dylib
Whisper.net.Runtime/maccatalyst/: libggml.dylib  libwhisper.dylib
Whisper.net.Runtime/macos/: libwhisper.dylib
Whisper.net.Runtime/macos-arm64/: libwhisper.dylib
Whisper.net.Runtime/macos-x64/: libggml.dylib  libwhisper.dylib
Whisper.net.Runtime/osx-arm64/: whisper.dylib
Whisper.net.Tests/: FactoryTests.cs  ProcessAsyncFunctionalTests.cs  ProcessFunctionalTests.cs  ProcessQuantizedTests.cs  ProcessorE2ETests.cs  TestModelProvider.cs  Whisper.net.Tests.csproj
Whisper.net/Ggml/: GgmlType.cs  (+4 more)
ci/: run.sh
cmake/: arm64-windows-llvm.cmake  x64-windows-llvm.cmake  x86-windows-llvm.cmake
examples/: Directory.Build.props  Whisper.net.Examples.sln  Whisper.net.Examples.slnx  common-whisper.cpp  common-whisper.h
ggml/: CMakeLists.txt
ggml/src/ggml-hexagon/htp/: CMakeLists.txt  concat-ops.c  cpy-ops.c  flash-attn-ops.c  gated-delta-net-ops.c  hmx-flash-attn-ops.c  hmx-matmul-ops.c  hmx-ops.h  htp-ctx.h  htp-ops.h  hvx-utils.h  main.c  matmul-ops.c  pad-ops.c  rope-ops.c  ssm-conv.c  unary-ops.c
runtimes/: Whisper.net.AllRuntimes.nuspec  Whisper.net.Runtime.CoreML.nuspec  Whisper.net.Runtime.Cuda.Linux.nuspec  Whisper.net.Runtime.Cuda.Windows.nuspec  Whisper.net.Runtime.Cuda.nuspec  Whisper.net.Runtime.Cuda12.Linux.nuspec  Whisper.net.Runtime.Cuda12.Windows.nuspec  Whisper.net.Runtime.Cuda12.nuspec  Whisper.net.Runtime.Metal.nuspec  Whisper.net.Runtime.NoAvx.nuspec  Whisper.net.Runtime.OpenVino.nuspec  Whisper.net.Runtime.Vulkan.nuspec  Whisper.net.Runtime.nuspec
scripts/: bench-all-gg.txt  build-linux.ps1  build-osx.ps1  build-windows.ps1  sync-ggml.last
src/: whisper.cpp
tests/: README.md
website/: README.md  index.html  package-lock.json  package.json
(+431 files in other folders)
